// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateTimePickerElement > placeholder corresponds to date and time formats 1`] = `
<div
  class="control ab-form-group"
  data-form-error="false"
>
  
  <!--v-if-->
  <div
    class="control__wrapper"
  >
    <div
      class="control__elements"
    >
      <div
        class="control__elements-wrapper"
      >
        
        <!--v-if-->
        <div
          class="ab-form-group__children"
        >
          
          <div
            class="ab-datetime-picker__wrapper"
          >
            <i
              class="button-icon__icon iconoir-calendar"
            />
            <input
              class="ab-input ab-datetime-picker__input"
              placeholder="DD/MM/YYYY"
              type="text"
              value=""
            />
            <div>
              <!--v-if-->
            </div>
          </div>
          
          <!--v-if-->
        </div>
        
      </div>
      <!--v-if-->
      
      
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`DateTimePickerElement > placeholder corresponds to date and time formats 2`] = `
<div
  class="control ab-form-group"
  data-form-error="false"
>
  
  <!--v-if-->
  <div
    class="control__wrapper"
  >
    <div
      class="control__elements"
    >
      <div
        class="control__elements-wrapper"
      >
        
        <!--v-if-->
        <div
          class="ab-form-group__children"
        >
          
          <div
            class="ab-datetime-picker__wrapper"
          >
            <i
              class="button-icon__icon iconoir-calendar"
            />
            <input
              class="ab-input ab-datetime-picker__input"
              placeholder="MM/DD/YYYY"
              type="text"
              value=""
            />
            <div>
              <!--v-if-->
            </div>
          </div>
          
          <!--v-if-->
        </div>
        
      </div>
      <!--v-if-->
      
      
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`DateTimePickerElement > placeholder corresponds to date and time formats 3`] = `
<div
  class="control ab-form-group"
  data-form-error="false"
>
  
  <!--v-if-->
  <div
    class="control__wrapper"
  >
    <div
      class="control__elements"
    >
      <div
        class="control__elements-wrapper"
      >
        
        <!--v-if-->
        <div
          class="ab-form-group__children"
        >
          
          <div
            class="ab-datetime-picker__wrapper"
          >
            <i
              class="button-icon__icon iconoir-calendar"
            />
            <input
              class="ab-input ab-datetime-picker__input"
              placeholder="YYYY-MM-DD"
              type="text"
              value=""
            />
            <div>
              <!--v-if-->
            </div>
          </div>
          
          <!--v-if-->
        </div>
        
      </div>
      <!--v-if-->
      
      
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`DateTimePickerElement > placeholder corresponds to date and time formats 4`] = `
<div
  class="control ab-form-group"
  data-form-error="false"
>
  
  <!--v-if-->
  <div
    class="control__wrapper"
  >
    <div
      class="control__elements"
    >
      <div
        class="control__elements-wrapper"
      >
        
        <!--v-if-->
        <div
          class="ab-form-group__children"
        >
          
          <div
            class="ab-datetime-picker__wrapper"
          >
            <i
              class="button-icon__icon iconoir-calendar"
            />
            <input
              class="ab-input ab-datetime-picker__input"
              placeholder="DD/MM/YYYY"
              type="text"
              value=""
            />
            <div>
              <input
                class="ab-input ab-datetime-picker__input"
                placeholder="HH:mm"
                type="text"
                value=""
              />
            </div>
          </div>
          
          <!--v-if-->
        </div>
        
      </div>
      <!--v-if-->
      
      
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`DateTimePickerElement > placeholder corresponds to date and time formats 5`] = `
<div
  class="control ab-form-group"
  data-form-error="false"
>
  
  <!--v-if-->
  <div
    class="control__wrapper"
  >
    <div
      class="control__elements"
    >
      <div
        class="control__elements-wrapper"
      >
        
        <!--v-if-->
        <div
          class="ab-form-group__children"
        >
          
          <div
            class="ab-datetime-picker__wrapper"
          >
            <i
              class="button-icon__icon iconoir-calendar"
            />
            <input
              class="ab-input ab-datetime-picker__input"
              placeholder="DD/MM/YYYY"
              type="text"
              value=""
            />
            <div>
              <input
                class="ab-input ab-datetime-picker__input"
                placeholder="hh:mm A"
                type="text"
                value=""
              />
            </div>
          </div>
          
          <!--v-if-->
        </div>
        
      </div>
      <!--v-if-->
      
      
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`DateTimePickerElement > placeholder corresponds to date and time formats 6`] = `
<div
  class="control ab-form-group"
  data-form-error="false"
>
  
  <!--v-if-->
  <div
    class="control__wrapper"
  >
    <div
      class="control__elements"
    >
      <div
        class="control__elements-wrapper"
      >
        
        <!--v-if-->
        <div
          class="ab-form-group__children"
        >
          
          <div
            class="ab-datetime-picker__wrapper"
          >
            <i
              class="button-icon__icon iconoir-calendar"
            />
            <input
              class="ab-input ab-datetime-picker__input"
              placeholder="MM/DD/YYYY"
              type="text"
              value=""
            />
            <div>
              <input
                class="ab-input ab-datetime-picker__input"
                placeholder="HH:mm"
                type="text"
                value=""
              />
            </div>
          </div>
          
          <!--v-if-->
        </div>
        
      </div>
      <!--v-if-->
      
      
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`DateTimePickerElement > placeholder corresponds to date and time formats 7`] = `
<div
  class="control ab-form-group"
  data-form-error="false"
>
  
  <!--v-if-->
  <div
    class="control__wrapper"
  >
    <div
      class="control__elements"
    >
      <div
        class="control__elements-wrapper"
      >
        
        <!--v-if-->
        <div
          class="ab-form-group__children"
        >
          
          <div
            class="ab-datetime-picker__wrapper"
          >
            <i
              class="button-icon__icon iconoir-calendar"
            />
            <input
              class="ab-input ab-datetime-picker__input"
              placeholder="MM/DD/YYYY"
              type="text"
              value=""
            />
            <div>
              <input
                class="ab-input ab-datetime-picker__input"
                placeholder="hh:mm A"
                type="text"
                value=""
              />
            </div>
          </div>
          
          <!--v-if-->
        </div>
        
      </div>
      <!--v-if-->
      
      
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`DateTimePickerElement > placeholder corresponds to date and time formats 8`] = `
<div
  class="control ab-form-group"
  data-form-error="false"
>
  
  <!--v-if-->
  <div
    class="control__wrapper"
  >
    <div
      class="control__elements"
    >
      <div
        class="control__elements-wrapper"
      >
        
        <!--v-if-->
        <div
          class="ab-form-group__children"
        >
          
          <div
            class="ab-datetime-picker__wrapper"
          >
            <i
              class="button-icon__icon iconoir-calendar"
            />
            <input
              class="ab-input ab-datetime-picker__input"
              placeholder="YYYY-MM-DD"
              type="text"
              value=""
            />
            <div>
              <input
                class="ab-input ab-datetime-picker__input"
                placeholder="HH:mm"
                type="text"
                value=""
              />
            </div>
          </div>
          
          <!--v-if-->
        </div>
        
      </div>
      <!--v-if-->
      
      
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`DateTimePickerElement > placeholder corresponds to date and time formats 9`] = `
<div
  class="control ab-form-group"
  data-form-error="false"
>
  
  <!--v-if-->
  <div
    class="control__wrapper"
  >
    <div
      class="control__elements"
    >
      <div
        class="control__elements-wrapper"
      >
        
        <!--v-if-->
        <div
          class="ab-form-group__children"
        >
          
          <div
            class="ab-datetime-picker__wrapper"
          >
            <i
              class="button-icon__icon iconoir-calendar"
            />
            <input
              class="ab-input ab-datetime-picker__input"
              placeholder="YYYY-MM-DD"
              type="text"
              value=""
            />
            <div>
              <input
                class="ab-input ab-datetime-picker__input"
                placeholder="hh:mm A"
                type="text"
                value=""
              />
            </div>
          </div>
          
          <!--v-if-->
        </div>
        
      </div>
      <!--v-if-->
      
      
    </div>
    <!--v-if-->
  </div>
  
</div>
`;
